name:              yesodweb
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodweb.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

Flag upload
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Blog
                     Book
                     Import
                     Import.Content
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Wiki
                     Handler.Page
                     Handler.Blog
                     Handler.Book

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                PatternGuards

executable         yesodweb
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                PatternGuards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1        && < 1.2
                 , yesod-newsfeed                >= 1.1        && < 1.2
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.0.14
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , blaze-html                    >= 0.5        && < 0.6
                 , conduit                       >= 0.5.2.1    && < 0.6
                 , resourcet                     >= 0.3        && < 0.5
                 , xss-sanitize                  >= 0.3.1      && < 0.4
                 , system-filepath               >= 0.4.4      && < 0.5
                 , system-fileio                 >= 0.3        && < 0.4
                 , attoparsec                    >= 0.10       && < 0.11
                 , attoparsec-conduit            >= 0.5        && < 0.6
                 , data-default
                 , xml-conduit                   >= 1.0        && < 1.1
                 , filesystem-conduit            >= 0.5        && < 0.6
                 , time
                 , http-types                    >= 0.7        && < 0.8
                 , containers
                 , simple-sendfile               >= 0.2.1      && < 0.3
                 , unix
                 , transformers
                 , old-locale
                 , process
                 , pureMD5
                 , wai-app-static
                 , markdown

executable         static-upload
    if flag(upload)
        Buildable: True
        Build-depends: xml-types                    >= 0.3.1          && < 0.4
                     , aws                          >= 0.3.2          && < 0.4
                     , tagstream-conduit            >= 0.2.2          && < 0.3
    else
        Buildable: False
    main-is: static-upload.hs
