[package]
name = "make-it-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
fs-err = "2.9.0"
html5ever = "0.26.0"
reqwest = { version = "0.11.22", default-features = false, features = [
    "blocking",
] }
